--- a/C-C++02.md
+++ b/C-C++02.md
@@ -8,6 +8,166 @@
 + 注意：
   + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
 
+## strlen()
+
++ 原型：`size_t strlen(const char *str);`
++ 功能：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
++ 参数：
+  + `str` -- 要计算长度的字符串
++ 返回值：
+  + 返回字符串的长度
++ 需求：
+  + 头文件：`#include <string.h>`
+
+## dup2()
+
++ 原型：`int dup2 (int fd, int fd2);`
++ 功能：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
++ 参数：
+  + `fd`  --  已经打开的文件描述符
+  + `fd2` --  需要重复打开的文件描述符
++ 返回值：
+  + 成功
+  + 失败
+
+## write()
+
++ 原型：`ssize_t write(int __fd, const void *__buf, size_t __n);`
++ 功能：将 n 字节的 buf 写入 __fd
++ 参数：
+  + `__fd`  --  要保存写入数据的文件
+  + `__buf` --  保存要写入的内存块指针
+  + `n`     --  数据大小
++ 返回值：
+  + 成功  --  返回写入的数字
+  + 失败  --  -1
+
+## read()
+
++ 原型：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
++ 功能：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
++ 参数：
+  + `__fd`  --  被读取数据的文件
+  + `__buf` --  存放数据的内存块指针
+  + `__nbytes`  --  要读取的数据大小
++ 返回值：
+  + 成功  --  读取的数字
+  + 失败  --  -1 or 0 
+
+## mmap()
+
++ 原型：`void* mmap(void *addr, size_t len, int prot, int flags, int fd, off_t offset);`
++ 功能：映射地址从`addr`附近开始并扩展到`len`字节。从`offset`根据`prot`和`flags`写入文件`fd`中描述。如果`MAP_FIXED`位是在`flags`中设置，映射将准确地位于`addr`；否则系统会选择一个方便的附近地址
++ 参数：
+  + `addr`  --  要映射的地址
+  + `len`   --  要映射的数据大小
+  + `prot`  -- 
+  + `flags` --  标识
+  + `fd`    --  存放需要映射数据的文件
+  + `offset`--  偏移
++ 返回值：
+  + 成功  --  实际映射地址
+  + 失败  --  `MAP_FAILED`
+
+## dirname()
+
++ 原型：`char* dirname(char *path);`
++ 功能：返回`path`的目录部分，如果没有可用的，就返回`.`
++ 参数：
+  + `path`  --  需要查找目录的文件
++ 返回值：
+  + 成功  --  文件所在的目录
+  + 失败  --  
+
+## basename()
+
++ 原型：`char* basename(char *pathfile);`
++ 功能：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
++ 参数：
+  + `pathfile`  --  需要操作的文件
++ 返回值：
+  + 成功  --  文件名
+  + 失败  --  
+
+## readlink()
+
++ 原型：`ssize_t readlink(const char *path, char *buf, size_t bufsize);`
++ 功能：
+  + readlink()会将参数path的 符号链接内容存储到参数buf所指的内存空间，返回的内容不是以\000作字符串结尾，但会将字符串的字符数返回，这使得添加\000变得简单。
+  + 若参数bufsiz小于符号连接的内容长度，过长的内容会被截断，如果 readlink 第一个参数指向一个文件而不是 符号链接时，readlink 设 置errno 为 EINVAL 并返回 -1。 readlink()函数组合了open()、read()和close()的所有操作
++ 参数：
+  + `path`  --  符号连接
+  + `buf`   --  存储从`path`读取到的内容
+  + `bufsize` --  读取到的字符数
++ 返回值：
+  + 成功  --  返回读取到的字符数
+  + 失败  --  -1
++ 注意：
+  + Linux系统中有一个符号链接 `/proc/self/exe` -- 它代表当前程序
+  + **所以可以使用`readlink()`读取它的源路径就可以获取当前程序的绝对路径**
+
+## strdup()
+
++ 原型：`char* strdup(const char *s);`
++ 功能：转储字符串，返回一个字符指针，其存储的内容和参数`s`相同，获得的内存是使用`malloc()`完成的，因此可以使用`free()`完成
++ 参数：
+  + `s`  --  需要转储的字符串
++ 返回值：
+  + 返回新存储的字符指针
+
+## mkdir()
+
++ 原型：`int mkdir(const char *path, __model_t mode);`
++ 功能：创建一个目录`path`，并将文件权限设置为`mode`
++ 参数：
+  + `path`  --  目录文件路径
+  + `model` --  创建的目录文件的权限
++ 返回值：
+  + 成功  --  
+  + 失败  -- 
+
+## chmod()
+
++ 原型：`int chmod(const char* file, mode_t mode);`
++ 功能：将文件`file`的权限设置为`mode`
++ 参数：
+  + `file`  --  需要修改的文件
+  + `mode`  --  权限
++ 返回值：
+  + 成功  --  
+  + 失败  -- 
+
+## open()
+
++ 原型：`int open(const char *path, int __oflag, ...);`
++ 功能：以指定模式打开指定文件
++ 参数：
+  + `path`  --  要操作的文件，绝对路径
+  + `oflag` --  通常由一下常量通过或运算`I`组成
+    + O_RDONlY 只读打开
+    + O_WRONlY 只写打开
+    + O_RDWR 读写打开
+    + O_EXEC 只执行打开
+    + O_SEARCH 只搜索（对于目录有此选项）
+    + 在以上五个常量中必须指定且只能指定一个，而以下常量为可选的 
+      + O_APPEND 每次写入追加到文件末尾
+      + O_CLOEXEC 把FD_CLOEXEC设定为文件描述符
+      + O_CREATE 若文件不存在则创建， 需要指定文件权限位 ， 即mode_t 参数。
+      + O_DIRECTORY 若path指向的不为目录，则出错。
+      + O_EXCL 若同时指定O_CREATE且文件不存在，则出错。可以将测试文件存在和创建文件封装为原子操作
+      + O_NOCTTY 若path引用的是终端设备，则不将该设备分配作为该进程的控制终端
+      + O_NONBLOCK 若path引用的是一个FIFO，一个块特殊文件或者字符特殊文件，则此选项将本次文件的打开操作和后续的IO操作设置为非阻塞模式
+      + O_SYNC 每次操作需要等待物理IO完成，包括更新文件属性而需要的物理IO
+      + O_TURNC 若文件存且为只写或读写打开，那么将其长度截断为零。
+      + O_DSYNC 每次写入需要等待物理IO完成，但是如果不影响读取，则不需要更新文件属性
+      + O_FSYNC 使每一个 以文件描述符为参数的进行的read操作等待，直到所有对文件同一部分的挂起写操作都完成
++ 返回值：
+  + 成功  --
+  + 失败  --
++ 需求：
+  + 头文件：`#include <fcntl.h>`  
+
+
 ## atoi()
 
 + 原型：`int atoi(const char *str);`
@@ -37,6 +197,45 @@
 + 返回值：
   + 成功  --  返回转换后的双精度浮点数
   + 失败  --  返回零(0.0)
+
+## clock_gettime()
+
++ 原型：`int clock_gettime(clockid_t __clock_id, struct timespec *__tp);`
++ 功能：获取当前时钟的时间，并保存到参数`__tp`
++ 参数：
+  + `__clock_id`  --  时钟ID
+  + `__tp`        --  `timespec` 结构体指针
++ 返回值：
+  + 成功  --  
+  + 失败  -- 
++ 需求：
+  + 头文件：`#include <time.h>`
+
+## getdelim()
+
++ 原型：`_IO_ssize_t __getdelim(char **__restrict __lineptr, size_t *__restrict __n, int __delimiter, FILE *__restrict __stream);`
++ 功能：函数应从流读取，直到遇到与定界符字符匹配的字符为止。定界符参数是一个int，应用程序应确保其为终止读取过程的无符号字符表示的字符。如果定界符参数具有任何其他值，则行为是不确定的，换言之，从给定文件中读取流，遇到定界符参数就终止
++ 参数：
+  + `lineptr`  --  指向初始缓冲区或空指针的指针
+  + `n`        --  指向初始缓冲区大小的指针
+  + `delimiter`--  定界线字符
+  + `stream`   --  有效输入流，由`fopen()`打开
++ 返回值：
+  + 成功  --  存储在缓冲区中的字符数，包括定界符，但是不包括空字符
+  + 失败  --  -1
+
+## iscntrl()
+
++ 原型：`int iscntrl(int c);`
++ 功能：检查所传的字符是否是控制字符
+  + 根据标准 ASCII 字符集，控制字符的 ASCII 编码介于 0x00 (NUL) 和 0x1f (US) 之间，以及 0x7f (DEL)，某些平台的特定编译器实现还可以在扩展字符集（0x7f 以上）中定义额外的控制字符
++ 参数：
+  + `c`  --  要检查的字符
++ 返回值：
+  + 如果c 是一个控制字符，则返回非零值
+  + 否则，返回0
++ 需求：
+  + 头文件：`#include <ctype.h>`
 
 ## strcpy()
 
@@ -815,3 +1014,65 @@
   + `range-declaration`  --  it is declaration of a variable of type same as the type of elements of range-expression. Often the auto keyword is used to automatically identify the type of elements in range-expression.
   + `range-expression`   --  any expression used to represent a sequence of elements. Also Sequence of elements in braces can be used.
   + `loop-statement`     --  body of for loop that contains one or more statements that are to be executed repeatedly till the end of range-expression
+
+## 概述
+
++ 中国大学mooc 北京邮电大学 C++语言程序设计
+
+## 一
+
++ C++ 语言的特点
+  + 使用面向对象方法，易于代码重用
+  + 适用于大型软件工程项目，易于管理
+  + 代码可维护性好
+
++ 面向过程的程序基本结构：
+  + 顺序
+  + 分支
+  + 循环
+
++ 面向过程的程序设计主要思想：
+  + **自顶向下，逐步求精**
+  + 模块化
+    + 将一个大的系统按照子结构之间的疏密程序分解为较小的部分，每部分称为模块
+    + 分解的原则是：模块之间相对独立，联系较少
+    + **提供给模块外部可见的只是抽象数据及其上的抽象操作，隐藏了实现细节**
+    + 整个程序由多模块组成，模块一般以函数为单位
+
++ 面向对象的程序设计将数据和处理数据的函数当成一个整体：类（类的实例称为对象）
+  + 封装：由对象的概念支持。只需知道外部接口，不需知道内部实现，就可以使用的特性
+  + 继承：由类的概念支持。利用已有的成果进行扩展，充分体现了代码重用
+  + 多态：运行时特性
+
++ 面向对象的程序设计的步骤：
+  + 找出问题中的对象和类
+  + 确定每个对象和类的功能，例如具体的属性和方法等。
+  + 找出这些对象和类之间的关系，确定对象之间的消息通信方式，类之间的继承和组合等关系
+  + 编写程序实现这些对象和类
+
++ 关键字 -- 是**C++**预先定义好的标识符，在程序中具有特殊作用
++ 标识符 -- 是**程序员声明**的单词，它命名程序正文中的一些实体，例如函数名，变量名，类名，对象名等。
++ 分隔符 -- 不表示实际的操作，仅仅用于构造程序
+  + C++分隔符：`()` `{}` `,` `;` `:`
++ 空白  -- 是指制表符，空格，空行，用于分隔单词，在C++语句中经常出现空白，通常都忽略不计
+
++ C++的数据类型决定了
+  + 数据表示形式
+  + 数据的存储空间
+  + 对数据可以进行哪些运算以及运算规则
++ C++的数据类型分为：基本数据类型和自定义数据类型
+
++ 表达式 -- 操作数与运算符（操作符）序列，表达式的值：运算结果
++ 语句   -- 由表达式和结尾的`;`组成一个C++语句
++ 语句块 -- 由`{}`括起来的语句序列，又称为复合语句
++ 运算符 
+  + C++提供了丰富的运算符
+  + 运算符的含义：取决于操作数的类型，当操作数为基本数据类型时，C++定义了运算符的运算规则；对于自定义数据类型，C++支持运算符重载
+
++ 语言的输入输出
+  + 标准输入设备：一般指的是键盘，用于向程序输入数据
+  + 标准输出设备：一般指显示器，用于显示程序的执行结果
+  + C语言没有输入输出语句，而是**使用库函数实现输入输出**，基本输出库函数：putchar, printf 基本输入库函数：getchar, scanf
+  + C++没有输入输出语句，而是使用`iostream`类库实现输入输出
+    + 使用`iostream`库中标准输入流对象`cin`， 实现从键盘读取数据
+    + 使用`iostream`库中标准输出流对象`cout`, 将数据输出到屏幕上
