--- a/C-C++03.md
+++ b/C-C++03.md
@@ -1,61 +1,107 @@
-# 概述
+## strrchr()
 
-+ 中国大学mooc 北京邮电大学 C++语言程序设计
++ 原型：`char* strrchr(const char *str, int c);`
++ 功能：在参数 `str` 所指向的字符串中搜索最后一次出现字符 `c`（一个无符号字符）的位置
++ 参数：
+  + `str`  --  C字符串
+  + `c`    --  要搜索的字符。以 `int` 形式传递，但是最终会转换回 `char` 形式
++ 返回值：
+  + 成功  --  返回`str`中最后一次出现字符`c`的位置
+  + 失败  --  没有找到该值，返回一个空指针
++ 需求：
+  + 头文件：`#include <string.h>`
 
-## 一
+## pipe()
 
-+ C++ 语言的特点
-  + 使用面向对象方法，易于代码重用
-  + 适用于大型软件工程项目，易于管理
-  + 代码可维护性好
++ 原型：`int pipe(int *__pipedes);`
++ 功能：创建单项通信通道(管道)
+  + 如果成功，两个文件描述符存储在`pipedes`中
+  + `pipedes[1]`上写入的字节可以从`pipedes[0]`中读取
++ 参数：
+  + `__pipedes`  --  数组
++ 返回值：
+  + 成功  --  0
+  + 失败  --  -1
++ 需求：
+  + 头文件：`#include <unistd.h>`
 
-+ 面向过程的程序基本结构：
-  + 顺序
-  + 分支
-  + 循环
+## fork()
 
-+ 面向过程的程序设计主要思想：
-  + **自顶向下，逐步求精**
-  + 模块化
-    + 将一个大的系统按照子结构之间的疏密程序分解为较小的部分，每部分称为模块
-    + 分解的原则是：模块之间相对独立，联系较少
-    + **提供给模块外部可见的只是抽象数据及其上的抽象操作，隐藏了实现细节**
-    + 整个程序由多模块组成，模块一般以函数为单位
++ 原型：`pid_t fork();`
++ 功能：克隆调用进程，创建一个精确的副本。
++ 参数：无
++ 返回值：
+  + 成功  --  新进程返回 0，或者新进程对旧进程的进程ID
+  + 失败  --  -1
 
-+ 面向对象的程序设计将数据和处理数据的函数当成一个整体：类（类的实例称为对象）
-  + 封装：由对象的概念支持。只需知道外部接口，不需知道内部实现，就可以使用的特性
-  + 继承：由类的概念支持。利用已有的成果进行扩展，充分体现了代码重用
-  + 多态：运行时特性
+## execl()
 
-+ 面向对象的程序设计的步骤：
-  + 找出问题中的对象和类
-  + 确定每个对象和类的功能，例如具体的属性和方法等。
-  + 找出这些对象和类之间的关系，确定对象之间的消息通信方式，类之间的继承和组合等关系
-  + 编写程序实现这些对象和类
++ 原型：`int execl(const char* path, const char* arg,...);`
++ 功能：使用参数`arg`以及之后的参数 执行`path`
++ 参数：
+  + `path`  --  要执行的文件
+  + `arg`   --  执行的参数
++ 返回值：
+  + 成功  --
+  + 失败  --
 
-+ 关键字 -- 是**C++**预先定义好的标识符，在程序中具有特殊作用
-+ 标识符 -- 是**程序员声明**的单词，它命名程序正文中的一些实体，例如函数名，变量名，类名，对象名等。
-+ 分隔符 -- 不表示实际的操作，仅仅用于构造程序
-  + C++分隔符：`()` `{}` `,` `;` `:`
-+ 空白  -- 是指制表符，空格，空行，用于分隔单词，在C++语句中经常出现空白，通常都忽略不计
+## _exit()
 
-+ C++的数据类型决定了
-  + 数据表示形式
-  + 数据的存储空间
-  + 对数据可以进行哪些运算以及运算规则
-+ C++的数据类型分为：基本数据类型和自定义数据类型
++ 原型：`void _exit(int __status);`
++ 功能：使用`__status`的`low-order 8 bits`终止程序执行
++ 参数：
+  + `__status`  --  
++ 返回值：
 
-+ 表达式 -- 操作数与运算符（操作符）序列，表达式的值：运算结果
-+ 语句   -- 由表达式和结尾的`;`组成一个C++语句
-+ 语句块 -- 由`{}`括起来的语句序列，又称为复合语句
-+ 运算符 
-  + C++提供了丰富的运算符
-  + 运算符的含义：取决于操作数的类型，当操作数为基本数据类型时，C++定义了运算符的运算规则；对于自定义数据类型，C++支持运算符重载
+## waitpid()
 
-+ 语言的输入输出
-  + 标准输入设备：一般指的是键盘，用于向程序输入数据
-  + 标准输出设备：一般指显示器，用于显示程序的执行结果
-  + C语言没有输入输出语句，而是**使用库函数实现输入输出**，基本输出库函数：putchar, printf 基本输入库函数：getchar, scanf
-  + C++没有输入输出语句，而是使用`iostream`类库实现输入输出
-    + 使用`iostream`库中标准输入流对象`cin`， 实现从键盘读取数据
-    + 使用`iostream`库中标准输出流对象`cout`, 将数据输出到屏幕上
++ 原型：`pid_t waitpid(pid_t  pid, int* stat_loc, int options);`
++ 功能：等待进程为`pid`的子进程死亡， 
++ 参数：
+  + `pid`  --  等待的进程
+    + pid有四种情况：
+      + pid <  -1 等待组ID等于pid绝对值的任意子进程
+      + pid == -1 等待任意子进程
+      + pid == 0  等待组ID等于调用进程组ID的任意子进程
+      + pid >  0  等待进程ID与pid相等的子进程
+  + `stat_loc`  --  指向终止进程的终止状态，如果不关心终止状态可指定为空指针
+  + `options`   --  控制waitpid的操作
+    + WCONTINUED
+    + WUNTRACED
+    + WNOHANG  waitpid不阻塞
++ 返回值：
+  + 成功  --  返回pid，并将子进程的状态存储到`stat_loc`中
+  + 失败  --  -1
+
+## mkstemp()
+
++ 原型：`int mkstemp(char *__template);`
++ 功能：根据`__tmplate`生成唯一的临时文件名
++ 参数：
+  + `__tmplate`  --  需要操作的文件
++ 返回值：
+  + 成功  --  返回在文件上打开的用于读取和写入的文件描述符
+  + 失败  --  -1 （如果它不能创建一个唯一的文件名）
+
+## openlog()
+
++ 原型：`void openlog(const char *ident, int option, int facility);`
++ 功能：此函数用来打开一个到系统日志记录程序的连接，打开之后就可以用`syslog`或`vsyslog`函数向系统日志里添加信息了。而`closelog`函数就是用来关闭此连接的
++ 参数：
+  + `ident`  --  一个标记，`ident`所表示的字符串将固定地加在每行日志的前面以标识这个日志，通常就写成当前程序的名称以作标记
+  + `option` --  参数option是下列值取与运算的结果：
+    + `LOG_CONS，LOG_NDELAY， LOG_NOWAIT， LOG_ODELAY， LOG_PERROR，LOG_PID`
+    + 各值意义请参考`man openlog`手册
+  + `facility`  --  指明记录日志的程序的类型
++ 返回值：空
+
+## setlogmask()
+
++ 原型：`int setlogmask(int mask);`
++ 功能：设置日志掩码级别
++ 参数：
+  + `mask`  --  
++ 返回值：
+  + 成功  --  
+  + 失败  -- 
+
