--- a/动态人脸识别.md
+++ b/动态人脸识别.md
@@ -124,9 +124,21 @@
 + 训练过程：输入图像->图像预处理->提取特征->训练分类器（而分类）->得到训练好的模型
 + 测试过程：输入图像->图像预处理->提取特征->导入模型->二分类(是不是所要检测的物体)
 
-## 深度学习提取特征
+------------------------------------------------------------------
 
 + 小块的图像可以由基本的边缘构成，更结构化，更复杂的，就需要更高层次的特征表示，高层表达由底层表达组合而成。
 
 + 在计算机视觉里，网络的深度是实现网络好的效果的重要因素，输入特征的“登记”随着增加网络深度而变高。然而在网络深度不断加深的情况下，梯度消失和爆炸成为训练深层次的网络的障碍，导致网络无法收敛。
 + 虽然，归一初始化，各层输入归一化，使的可以收敛的网络的深度提升为原来的十倍，虽然网络收敛了，但是网络却开始退化了。
+
+## 深度学习  --  提取特征
+
++ 特征提取(Feature extraction),在机器学习、模式识别和图像处理中有很多的应用,
++ 特征提取是从一个初始测量的资料集合中开始做，然后建构出富含资讯性而且不冗馀的导出值，称为**特征值（feature）**
+
++ 它可以帮助接续的学习过程和归纳的步骤，在某些情况下可以让人更容易对资料做出较好的诠释.
++ 特征提取是一个降低维度的步骤，初始的资料集合被降到更容易管理的族群（特征）以便于学习，同时保持描述原始资料集的精准性与完整性。
+
++ 相较于原始庞大的资料集合需要很大量的资源来描述，特征提取可以减少需要描述这些资料的资源。当我们分析复杂资料时，其中一个主要的问题是源自于变数的数量过多
++ 分析很多个变数一般来说需要很大量的内存以及计算能力，同时太多变数也可能造成分类问题的算法有过度拟合于训练资料的现象，因此对新的采样无法有效地归纳。
++ **特征提取是处理变数组合并维持资料充足的准确性时，常通称的术语。很多机器学习的实作者认为适当的特征提取是有效模型构建的关键**。
