--- a/软件开发基础知识.md
+++ b/软件开发基础知识.md
@@ -1,4 +1,72 @@
-# 如何分析和解决一个任务：思维方式
+# 软件开发基础知识
+
+## 框架(Framework)
+
++ 什么是框架？
+  - 框架(`Framework`)是构成一类特定软件可复用设计的一组相互协作的类。框架规定了你的应用的体系结构。
+  - 它定义了整体结构，类和对象的分割，各部分的主要责任，类和对象怎么协作，以及控制流程。框架预定义了这些设计参数，以便于应用设计者或实现者能集中精力于应用本身的特定细节
+  - 框架一般处在低层应用平台和高层业务逻辑之间的中间层
+
++ 为什么要用框架？
+  - 因为软件系统发展到今天已经很复杂了，特别是服务器端软件，涉及到的知识，内容，问题太多。在某些方面使用别人成熟的框架，就相当于让别人帮你完成一些基础工作，你只需要集中精力完成系统的业务逻辑设计。
+  - 而且框架一般是成熟，稳健的，他可以处理系统很多细节问题，比如，事务处理，安全性，数据流控制等问题。
+  - 还有框架一般都经过很多人使用，所以结构很好，所以扩展性也很好，而且它是不断升级的，你可以直接享受别人升级代码带来的好处
+
++ 软件为什么要分层？
+ - 为了实现“高内聚、低耦合”。把问题划分开来各个解决，易于控制，易于延展，易于分配资源等
+
++ 框架和设计模式
+  - 构件通常是代码重用，而设计模式是设计重用，框架则介于两者之间，部分代码重用，部分设计重用，有时分析也可重用
+  - 框架与设计模式虽然相似，但却有着根本的不同。设计模式是对在某种环境中反复出现的问题以及解决该问题的方案的描述，它比框架更抽象
+  - 框架可以用代码表示，也能直接执行或复用，而对模式而言只有实例才能用代码表示;
+  - 设计模式是比框架更小的元素，一个框架中往往含有一个或多个设计模式，框架总是针对某一特定应用领域，但同一模式却可适用于各种应用
+
++ 构件(component)
+  - 构件是面向软件体系架构的可复用软件模块。
+  - 构件是可复用的软件组成成份，可被用来构造其他软件。它可以是被封装的对象类、类树、一些功能模块、软件框架（framework）、软件构架（或体系结构Architectural）、文档、分析件、设计模式（Pattern）等
+  - 1995年，Ian Graham给出的构件定义如下：构件（Component）是指一个对象（接口规范、或二进制代码），它被用于复用，接口被明确定义
+  - 构件是作为一个逻辑紧密的程序代码包的形式出现的，有着良好的接口
+  - 采用构件软件不需要重新编译，也不需要源代码并且不局限于某一种编程语言。该过程叫做**二进制复用（Binary Reuse）**，因为它是建立在接口而不是源代码级别的复用之上的。虽然软件构件必须遵守一致的接口，但是它们的内部实现是完全自动的。因此，可以用过程语言和面向对象语言创建构件
+
++ 构件和面向对象设计的差别
+  - 在纯面向对象的设计中，对象（类）、封装和继承三者缺一不可，但对构件可以没有继承性，只要实现封装即可
+  - 从构件和对象的生成方式上，对象生成属于实例化的过程，比较单一，而生成构件的方式较多
+  - **构件是设计的概念，与具体编程语言无关，不像对象属于编程中的概念，要依赖于具体的编程语言**
+  - 在对构件操作时不允许直接操作构件中的数据，数据真正被封装了。而对象的操作通过公共接口部分，这样数据是可能被访问操作的
+  - 对象对软件复用是通过继承实现的，构件对软件复用不仅可以通过继承还可以通过组装时的引用来实现
+  - 因此，构件不是对象，只是与对象类似
+
++ 在软件生产中有三种级别的重用：
+  - **内部重用**，即在同一应用中能公共使用的抽象块
+  - **代码重用**，即将通用模块组合成库或工具集，以便在多个应用和领域都能使用
+  - **应用框架的重用**，即为专用领域提供通用的或现成的基础结构，以获得最高级别的重用性
+
++ 框架开发
+  - 框架的最大好处就是重用。面向对象系统获得的最大的复用方式就是框架，一个大的应用系统往往可能由多层互相协作的框架组成
+  - 由于框架能重用代码，因此从一已有构件库中建立应用变得非常容易，因为构件都采用框架统一定义的接口，从而使构件间的通信简单
+
++ 框架解决的问题
+  - 框架要解决的最重要的一个问题是技术整合的问题
+  - 软件企业的研发将集中在应用的设计上，而不是具体的技术实现，技术实现是应用的底层支撑，它不应该直接对应用产生影响
+  - 举例：
+    - 一个做视频流应用的软件企业，他为电广行业提供整体的解决方案。他的优势在于将各种各样的视频硬件、服务器、和管理结合起来，因此他扮演的是一个集成商的角色。因此他的核心价值在于使用软件技术将不同的硬件整合起来，并在硬件的整合层面上提供一个统一的管理平台。所以他的精力应该放在解决两个问题
+      - 如何找到一种方法，将不同的硬件整合起来，注意，这里的整合并不是技术整合，而是一种思路上的整合 
+      - 如何描述这个管理系统的规范。你需要描述各种管理活动，以及管理中所涉及的不同实体。因为管理系统是针对硬件的管理，所以它是构架在硬件整合平台之上的
+
+## 数据模型(Data Model)
+
++ 数据模型（Data Model）是数据特征的抽象，它从抽象层次上描述了系统的静态特征、动态行为和约束条件，**为数据库系统的信息表示与操作提供一个抽象的框架**。数据模型所描述的内容有三部分，分别是数据结构、数据操作和数据约束
+
++ 模型可更形象、直观地揭示事物的本质特征，使人们对事物有一个更加全面、深入的认识，从而可以帮助人们更好地解决问题。利用模型对事物进行描述是人们在认识和改造世界过程中广泛采用的一种方法。计算机不能直接处理现实世界中的客观事物，而数据库系统正是使用计算机技术对客观事物进行管理，因此就需要对客观事物进行抽象、模拟，以建立适合于数据库系统进行管理的数据模型。数据模型是对现实世界数据特征的模拟和抽象
++ 数据模型是数据库设计中用来对现实世界进行抽象的工具，是数据库中用于提供信息表示和操作手段的形式构架。数据模型是数据库系统的核心和基础
+
++ 数据模型所描述的内容包括三个部分：数据结构、数据操作、数据约束
+  - **数据结构**：数据模型中的数据结构主要描述数据的类型、内容、性质以及数据间的联系等。数据结构是数据模型的基础，数据操作和约束都建立在数据结构上。不同的数据结构具有不同的操作和约束
+  - **数据操作**：数据模型中数据操作主要描述在相应的数据结构上的操作类型和操作方式
+  - **数据约束**：数据模型中的数据约束主要描述数据结构内数据间的语法、词义联系、它们之间的制约和依存关系，以及数据动态变化的规则，以保证数据的正确、有效和相容
+
+## 如何分析和解决一个任务：思维方式
+
 1. 先从整体上有一个总体思路，比如各个模块之间如何通信、依赖等，然后从一个点开始，照着调用路径分析下去，不要看一个类中的每个方法，而是只看用到的方法。
 2. 把所想要完成的目标分步实现，如果思路不清晰，不知道如何去做，可以模拟现实中的步骤。
    1. 要把想实现的东西转换成代码，不要想着最终结果好难，不知道怎么做。
