complete infer.h nms.h BoxMat.hpp

--- a/C-C++02.md
+++ b/C-C++02.md
@@ -545,11 +545,18 @@
 
 ## sscanf()
 
-+ `#include <stdio.h>  int sscanf(const char* s, const char* format, ...);`
-+ 从s读取数据并根据参数格式将它们存储到附加参数给出的位置，就像使用了scanf一样，但从s而不是标准输入（stdin）读取数据。(Reads data from s and stores them according to parameter format into the locations given by the additional arguments, as if scanf was used, but reading from s instead of the standard input(stdin).)
-+ 附加参数应该指向已分配的对象，其类型由格式字符串中的相应格式说明符指定。(The additional arguments should point to already allocated objects of the type specified by their corresponding format specifier within the format string.)
-+ 返回值：成功时，该函数返回参数列表中成功填充的项目数。在匹配失败的情况下，此计数可以匹配预期的项目数或更少（甚至为零）。(On success, the function returns the nunber of items in the argument list successfully filled. This count can match the expected number of items or be less(even zero) in the case of a matching failure.).
-+ 详细信息：`https://cplusplus.com/reference/cstdio/sscanf/`
++ 原型：`int sscanf(const char* s, const char* format, ...);`
++ 功能：
+  + 从s读取数据并根据参数格式将它们存储到附加参数给出的位置，就像使用了scanf一样，但从s而不是标准输入（stdin）读取数据。
+  + 附加参数应该指向已分配的对象，其类型由格式字符串中的相应格式说明符指定。
++ 参数：
+  + `s`  --  存储数据的指针
+  + `format`  --  格式化字符串
++ 返回值：
+  + 成功  --  返回参数列表中成功填充的项目数。
+  + 失败  --  匹配预期的项目数或更少（甚至为零）
++ 需求：
+  + 头文件：`#include <stdio.h>`
 
 ## c_str()
 
