--- a/C-C++03.md
+++ b/C-C++03.md
@@ -105,3 +105,73 @@
   + 成功  --  
   + 失败  -- 
 
+## C 标准库 `<stdarg.h>`
+
++ `stdarg.h` 头文件定义了一个变量类型 `va_list` 和三个宏，这三个宏可用于在参数个数未知（即参数个数可变）时获取函数中的参数。
++ 可变参数的函数通在参数列表的末尾是使用省略号`(,...)`定义的
+
+### 库变量 -- va_list
+
++ 声明：`typedef _G_va_list va_list;`
++ 功能：这是一个适用于 `va_start()`、`va_arg()` 和 `va_end()` 这三个宏存储信息的类型
+
+### va_start()
+
++ 原型：`void va_start(va_list ap, last_arg);`
++ 功能：
+  + C 库宏 `void va_start(va_list ap, last_arg)` 初始化 `ap` 变量，它与 `va_arg` 和 `va_end` 宏是一起使用的
+  + `last_arg` 是最后一个传递给函数的已知的固定参数，即**省略号之前的参数**
+  + 这个宏必须在使用 `va_arg` 和 `va_end` 之前被调用
++ 参数：
+  + `ap` -- 这是一个 `va_list` 类型的对象，它用来存储通过 `va_arg` 获取额外参数时所必需的信息
+  + `last_arg` -- 最后一个传递给函数的已知的固定参数
++ 返回值：空
+
+### va_arg()
+
++ 原型：`type va_arg(va_list ap, type);`
++ 功能：
+  + C 库宏 `type va_arg(va_list ap, type)` 检索函数参数列表中类型为 `type` 的下一个参数。
+  + 它无法判断检索到的参数是否是传给函数的最后一个参数
++ 参数：
+  + `ap`   -- 这是一个 `va_list` 类型的对象，存储了有关额外参数和检索状态的信息。该对象应在第一次调用 `va_arg` 之前通过调用 `va_start` 进行初始化
+  + `type` -- 这是一个类型名称。该类型名称是作为扩展自该宏的表达式的类型来使用的。
++ 返回值：
+  + 该宏返回下一个额外的参数，是一个类型为 `type` 的表达式
+
+### va_end()
+
++ 原型：`void va_end(va_list ap);`
++ 功能：
+  + C 库宏 `void va_end(va_list ap)` 允许使用了 `va_start` 宏的带有可变参数的函数返回。
+  + 如果在从函数返回之前没有调用 `va_end`，则结果为未定义
++ 参数：
+  + `ap` -- 这是之前由同一函数中的 `va_start` 初始化的 `va_list` 对象
++ 返回值：空
+
+## vsnprintf()
+
++ 原型：`int vsnprintf(char *s, size_t n, const char *format, va_list arg);`
++ 功能：将可变参数列表的格式化数据写入到大小为`n`的缓冲区
++ 参数：
+  + `s`  --  指向存储C字符串的缓冲区指针
+  + `n`  --  缓冲区最大可用的字节数
+  + `format`  --  包含格式化字符串的C字符串，和printf()相同
+  + `arg`--  识别使用`va_start`初始化的可变参数列表的值
++ 返回值：
+  + 成功  --  被写入的字符数`n`
+  + 失败  --  -1
+
+## sort()
+
++ 原型：
+  + `template <class RandomIt>, class <Compare>`
+  + `void sort(RandomIt first, RandomIt last, Compare comp);`
++ 功能：对在范围`[first, last]`内的元素进行排序，不能保证保留同等元素的顺序
++ 参数：
+  + `first`  --  排序元素范围的开始
+  + `last`   --  排序元素范围的结束
+  + `comp`   --  比较函数对象（即满足比较要求的对象）
++ 返回值：空
++ 需求：
+  + 头文件：`#include <algorithm>`
