--- a/软件开发基础知识.md
+++ b/软件开发基础知识.md
@@ -1,5 +1,86 @@
 # 软件开发基础知识
 
+## 计算机系统 --  基础知识
+
++ 计算系统，是一个完整的工作系统。系统不仅包括计算机，还包括各种软件以及外部设备。
++ 计算机就是用于执行指定操作的机器，这些操作通常是一组指令的集合，这些指令也称为软件(software)
+
++ 计算机硬件(hardware)是系统的物理组成部分，是可以真真切切触摸到的
++ 硬件包括计算机及其周边设备，例如键盘，鼠标，显示器，硬盘，打印机等
+
++ 计算机软件是以电子形式在硬件中驻留和运行的程序，例如编译器，操作系统以及应用程序等。软件提供了人机接口(Human Computer Interface, HCI)，并定义了计算机应该执行的操作
+
+### 计算机硬件
+
++ 在冯·诺依曼的模型里，可以看到输入设备，输出设备，存储单元以及由控制单元(control unit)和带有累加器(accumulator)的算数逻辑单元(Arithmetic Logic Unit, ALU)构成的模块
+
++ 存储单元存储数据，控制单元则控制数据的传输和数据的处理。
++ 控制单元取回指令并对其进行译码后存入存储单元中，同时从输入设备接收数据，并将数据存入存储单元
+
++ 控制单元对可执行指令进行译码，并将数据送入ALU。 ALU执行操作，控制单元则将计算结果送入输出设备。
++ 这里的控制单元和ALU一起称为中央处理单元(Central Processing Unit, CPU)
+
++ ALU中的累加器是一组高速寄存器的集合，用作算术和逻辑操作的操作数和结果的临时存储
++ ALU中的寄存器大小对应着计算机的字长(word size)。
++ 一般的字长有16位，32位，64位，这取决于处理器的设计方案
++ 1位代表一个二进制位，而且处理器的字长都是2的幂
+
+### 计算机软件
+
++ 计算机软甲包含了我们希望计算机执行的指令或者命令。
++ 在计算机软件中的分类中有几类比较重要，包括操作系统，软件工具，各种程序语言的编译器
+
++ 如果某个工程问题可以通过使用软件工具解决，通常来说，这比写一个程序来解决问题更高效。
++ 然而，很多问题都不能通过现有软件工具来解决，或者软件工具在需要解决问题的计算机系统上不可用，因此，我们也需要知道如何使用计算机语言来写程序。
++ 随着一些功能强大的软件的出现，这些软件除了支持专门的操作系统还包含了编程语言，这使得软件工具和计算机语言之间的区别变得越来越模糊
+
+### 计算机语言
+
++ 计算机语言有不同的层次
+
++ 机器语言(machine language)是最基础的语言，是与计算机硬件设计密切相关的
++ 因为计算机的设计是建立在二态技术（类似的情况有电路的开合，开关的打开与关闭，电池的正负极）基础上的，所以机器语言也使用两种符号来编写，通常使用数字0和1来表示。
++ 因此，机器语言也是一种二进制语言，它的指令都是使用由0和1组成的序列携程的，这些序列称为二进制串
++ 因为机器语言是与计算机硬件紧密相关的，所以SUN计算机上与HP计算机上的机器语言是不同的
+
++ 对于某种特定的计算机设计语言，汇编语言(assembly language)也是唯一的，但是汇编语言的指令是用可读性更好的符号语句而非二进制串编写的
++ 汇编语言的语句类型通常并不是很多，在使用汇编语言时，必须了解与之相应的硬件信息，
+  
++ 包含微处理器的设备通常要求程序能够极快地执行，这样的程序称为实时程序(real-time program)
++ 实时程序通常使用汇编语言编写，这样可以发挥特定计算机硬件的优势，以提高执行速度
+
++ 高级语言(high-level language)是具有类似自然语言的命令和指令的计算机语言，C++，C, Fortran,Ada, Java,Basic等都是高级语言
+
++ 执行计算机程序，要执行使用诸如C++这样的高级语言编写的程序，必须先将高级语言指令翻译成机器语言。
++ 执行这种翻译任务的程序称为编译器(compiler)
++ 在编译阶段出现的错误称作解析错误(parse error)或语法错误(syntax error)
++ 当没有语法错误后，编译器就可以成功地翻译程序，并声称机器语言形式的程序，生成的程序将完成最开始C++程序所要执行的功能。
+  + 这一，C++程序称为源文件(source file)，而生成的机器语言版本则称为目标文件(object file)
+  + 因此，源程序和目标程序所描述的功能是一致的，但是源程序使用高级语言编写的，而目标程序则是以机器语言的形式
+
++ 执行(execution)，这些步骤包括将目标程序与机器语言语句进行链接(linking)和把程序载入(loading)内存
++ 在执行阶段出现的错误称为执行错误(execution error)，运行时错误(run-time error)或逻辑错误(logic error)，这些错误也叫做程序bug
++ 如果执行错误是由于程序中所编写的语句产生的，必须在源程序中修改错误并重新进行编译，这个过程叫做调试(debugging)
+
+### 数据的表示与存储
+
++ 在数字计算机中，一个二进制位可以使用一个位(bit)表示。
++ 位上的值在任何时候都只能是0或1.从硬件的角度来说，当该位处于关闭或低电位时，它的值为0，而当其处于打开或高电位时，其值为1
+
++ 二进制数在内存中以序列的形式存储，位序列称为字(word)
++ 字的长度每增加1位，字所表示的数的大小就以2的幂增加，而其所能表示的范围就翻一倍
++ 内存中可用的字的数目称为内存空间，或者地址空间(address space)
+
++ 字长决定了存储在某个地址中的数值范围，而地址空间则决定了可以存储多少个字
++ C++包含整型数，浮点数，字符和布尔值等内建的数据类型。每种数据类型都由一个以字节(byte)为单位来确定的预定义大小，1个字节就是一个8位的序列。
++ 为了定义标识符(identifier)并为它分配空间，则需要使用类型声明语句(type declaration statement)。
++ 当定义一个标识符时，便确定了其数据类型，并在内存中分配相应字节数的空间。
+
++ 当数据存储在内存中时，它是以位序列存在的。
++ 这些位序列可能是指令，数字，字符，图像或数字信号的一部分，或者是其他类型的数据
+  + 负数的存储
+  + 浮点数的存储
+
 ## 框架(Framework)
 
 + 什么是框架？
