--- a/C-C++03.md
+++ b/C-C++03.md
@@ -175,3 +175,15 @@
 + 返回值：空
 + 需求：
   + 头文件：`#include <algorithm>`
+
+## sqrt()
+
++ 原型：`double sqrt(double x);`
++ 功能：返回x的平方根
++ 参数：
+  + `x`  --  需要处理的浮点数
++ 返回值：
+  + 成功  --  x的平方根
++ 需求：
+  + 头文件：`#include <math.h>`
+
