--- a/C-C++02.md
+++ b/C-C++02.md
@@ -787,6 +787,10 @@
 
 + C++判断变量类型：利用`typeid()`来判断变量类型
   + `#include <typeinfo>  typeid(var).name()`
+  + `type_info`的成员函数`name`返回类型的`C-style`字符串，但这个返回的类型名与程序中使用的相应类型名不一定一致，其返回值的实现由编译器决定，标准只要求每个类型返回的字符串是唯一的
+  + 和`sizeof`操作符类似，`typeid`的操作对象既可以是数据类型，也可以是表达式
+  + 不像`Java`、`C#`等动态语言，`C++`运行时能获取到的类型信息非常有限，标准也定义的很模糊，如同“鸡肋”一般。在实际工作中，我们一般只使用`type_info`的`“==”`运算符来判断两个类型是否相同
+  + 不能用`typeid`来判断基类指针实际指向的是否是某个派生类
 
 + C语言中，**没有判断变量类型的函数**
 + 可以简单利用`sizeof()`或者`ASCII`码辅助判断
