--- a/C-C++01.md
+++ b/C-C++01.md
@@ -355,7 +355,7 @@
 + 类似的，术语--函数重载，指的是可以有多个同名的函数，因此对名称进行了重载。
 + 这两个术语指的是同一个意思，但通常使用函数重载。可以通过函数重载来设计一系列函数--它们完成相同的工作，但是使用不同的参数列表。
 
-+ 函数重载的关键是**函数的参数列表**--也称为函数特征标(function signature)。
++ 函数重载的关键是函数的参数列表--也称为**函数特征标**(`function signature`)。
 + 如果两个函数的参数数目和类型相同，同时参数的排列顺序也相同，则它们的特征标相同，而变量名是无关紧要的。
 + C++允许定义名称相同的函数，条件是它们的特征标不同。如果参数数目和/或参数类型不同，则特征标也不同。
 
@@ -492,7 +492,7 @@
 
 + 在面型对象的编程中，首先会针对数据进行抽象（确定基类）和继承（确定派生类），构成类层次。
 + 这个类层次的使用者在使用它们的时候，如果仍然需要基类的时候写针对基类的代码，在需要派生类的时候写针对派生类的代码，就等于类层次完全暴露在使用者面前。如果这个类层次有任何的改变（增加了新类），都需要使用者“知道”（针对新类写代码）。这样就增加了类层次与其使用者之间的耦合，有人把这种情况列为程序中的“bad smell”之一
-+ 多态可以使程序员脱离这种窘境。bar()作为A-B这个类层次的使用者，它并不知道这个类层次中有多少个类，每个类都叫什么，但是一样可以很好的工作，当有一个C类从A类派生出来之后，bar()也不需要“知道”（修改）。这完全归功于编译器针对虚函数产生了可以在运行时刻确定被调用函数的代码。
++ 多态可以使程序员脱离这种窘境。`bar()`作为`A-B`这个类层次的使用者，它并不知道这个类层次中有多少个类，每个类都叫什么，但是一样可以很好的工作，当有一个C类从A类派生出来之后，bar()也不需要“知道”（修改）。这完全归功于编译器针对虚函数产生了可以在运行时刻确定被调用函数的代码。
 
 + 多继承中的虚函数，什么时候使用虚函数
 
